Reservas page content

--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -54,9 +54,9 @@ h3{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    text-transform: capitalize;
 }
 
 .elements{
     display: flex;
-    text-align: justify;
 }
