--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -21,16 +21,20 @@ h2
 }
 
 .content{
-    padding: 50px;
+    padding-top: 50px;
+    padding-right: 30px;
     @media (width <= 768px) {
         text-align: center;
     }
 }
 .content-r{
-    padding: 50px;
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-left: 80px;
     text-align: right;
     @media (width <= 768px) {
         text-align: center;
+        padding: 50px;
     }
 
 }
