--- a/src/css/reservas.css
+++ b/src/css/reservas.css
@@ -17,6 +17,33 @@ h2
     max-height: 500px;
     max-width: 100%;
     height: auto;
+    object-fit: cover;
+    position: relative;
+}
+.elements-icon{
+    position: absolute;
+    vertical-align: center;
+    max-height: 200px;
+    @media (width <= 768px) {
+        vertical-align: top;
+        min-height: 300px;
+        align-self: start;
+        padding-top: 30%;
+    }
+}
+.elements-img-r{
+    max-height: 500px;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    position: relative;
+}
+.elements-icon-r{
+    position: absolute;
+    vertical-align: center;
+    align-self: right;
+    max-height: 200px;
+    
 }
 
 .content{
