--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -1,40 +1,42 @@
-body{
+body {
     background-color: white;
 }
 
-h2
-{
+h2 {
     font-size: 64;
 }
 
 
-.description{
+.description {
     font: inherit;
     font-size: 64;
 }
 
 
-.elements-img{
+.elements-img {
     max-height: 500px;
     max-width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-.content{
+.content {
     padding-top: 50px;
     padding-right: 30px;
-    @media (width <= 768px) {
+
+    @media (width <=768px) {
         text-align: center;
         padding: 50px;
     }
 }
-.content-r{
+
+.content-r {
     padding-top: 50px;
     padding-right: 30px;
     padding-left: 80px;
     text-align: right;
-    @media (width <= 768px) {
+
+    @media (width <=768px) {
         text-align: center;
         padding: 50px;
     }
@@ -42,7 +44,7 @@ h2
 }
 
 
-.banner{
+.banner {
     width: 100%;
     height: 300px;
     position: relative;
@@ -50,12 +52,14 @@ h2
     text-align: center;
     margin: 0;
 }
-.banner-img{
+
+.banner-img {
     max-height: 300px;
     width: 100%;
     object-fit: cover;
 }
-.banner-text{
+
+.banner-text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -64,6 +68,37 @@ h2
     text-transform: capitalize;
 }
 
-.elements{
+.elements {
     align-items: center;
+}
+
+.footer-icons i {
+    color: black;
+}
+
+.footer-copy p {
+    color: #969696;
+    font-family: var(--parrafos);
+}
+
+.footer-container h5 {
+    font-family: var(--titles);
+    font-weight: bolder;
+}
+
+.footer-newsletter .form-control::placeholder {
+    color: #969696;
+    font-style: italic;
+    font-family: var(--enlaces);
+    letter-spacing: 1px;
+}
+
+.navbar .navbar-light {
+    position: fixed;
+
+}
+
+.navbar li {
+    font-family: var(--enlaces);
+    font-size: 1.2rem;
 }
