--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -1,104 +1,99 @@
 body {
-    background-color: white;
+  background-color: white;
 }
 
 h2 {
-    font-size: 64;
+  font-size: 64;
 }
-
 
 .description {
-    font: inherit;
-    font-size: 64;
+  font: inherit;
+  font-size: 64;
 }
 
-
 .elements-img {
-    max-height: 500px;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
+  max-height: 500px;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .content {
-    padding-top: 50px;
-    padding-right: 30px;
+  padding-top: 50px;
+  padding-right: 30px;
 
-    @media (width <=768px) {
-        text-align: center;
-        padding: 50px;
-    }
+  @media (width <=768px) {
+    text-align: center;
+    padding: 50px;
+  }
 }
 
 .content-r {
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-left: 80px;
-    text-align: right;
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-left: 80px;
+  text-align: right;
 
-    @media (width <=768px) {
-        text-align: center;
-        padding: 50px;
-    }
-
+  @media (width <=768px) {
+    text-align: center;
+    padding: 50px;
+  }
 }
 
-
 .banner {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    margin: 0;
+  width: 100%;
+  height: 300px;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  margin-top: 0;
 }
 
 .banner-img {
-    max-height: 300px;
-    width: 100%;
-    object-fit: cover;
+  max-height: 300px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-transform: capitalize;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-transform: capitalize;
 }
 
 .elements {
-    align-items: center;
+  align-items: center;
 }
 
 .footer-icons i {
-    color: black;
+  color: black;
 }
 
 .footer-copy p {
-    color: #969696;
-    font-family: var(--parrafos);
+  color: #969696;
+  font-family: var(--parrafos);
 }
 
 .footer-container h5 {
-    font-family: var(--titles);
-    font-weight: bolder;
+  font-family: var(--titles);
+  font-weight: bolder;
 }
 
 .footer-newsletter .form-control::placeholder {
-    color: #969696;
-    font-style: italic;
-    font-family: var(--enlaces);
-    letter-spacing: 1px;
+  color: #969696;
+  font-style: italic;
+  font-family: var(--enlaces);
+  letter-spacing: 1px;
 }
 
 .navbar .navbar-light {
-    position: fixed;
-
+  position: fixed;
 }
 
 .navbar li {
-    font-family: var(--enlaces);
-    font-size: 1.2rem;
+  font-family: var(--enlaces);
+  font-size: 1.2rem;
 }
