--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -3,26 +3,16 @@ body {
 }
 
 h2 {
-    font-size: 64;
+    font-family: 'Bodoni MT';
+    font-size: 64px;
 }
 
-
-.description {
-    font: inherit;
-    font-size: 64;
+h3{
+    font-family: 'Inter';
 }
 
-
-.elements-img {
-    max-height: 500px;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.content {
-    padding-top: 50px;
-    padding-right: 30px;
+.contenido {
+    padding-left: 50%;
 
     @media (width <=768px) {
         text-align: center;
@@ -40,13 +30,10 @@ h2 {
         text-align: center;
         padding: 50px;
     }
-
 }
-
 
 .banner {
     width: 100%;
-    height: 300px;
     position: relative;
     display: inline-block;
     text-align: center;
@@ -64,12 +51,35 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    vertical-align: middle;
     color: white;
     text-transform: capitalize;
+    font-family: 'Inter';
+    font-size: 96px;
+
+    @media (width <=768px) {
+        text-align: center;
+        font-size: 45px;
+    }
+}
+
+.description {
+    font-size: 64;
+    font-family: 'Inter';
 }
 
 .elements {
     align-items: center;
+}
+
+.elements-img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.info{
+    font-family: 'Inter';
 }
 
 .footer-icons i {
