--- a/src/css/delicias.css
+++ b/src/css/delicias.css
@@ -1,65 +1,148 @@
-.banner {
-    position: relative;
-    text-align: center;
-    color: white;
+/* Estilos Generales */
+:root {
+  --titles: "Bodoni Moda", serif;
+  --enlaces: "Cabin", sans-serif;
+  --parrafos: "Inter", sans-serif;
+  --black: #000000;
+  --white: #fff;
+  --grey: #969696;
+  --grey2: #d9d9d9;
+  --background: #f0f0f0;
+}
+body {
+  margin: 0;
+  font-family: var(--parrafos);
+}
+h1,
+h2 {
+  font-family: var(--titles);
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+h3 {
+  font-family: var(--enlaces);
+  margin-top: 50px;
+}
+.col-md-6 {
+  margin: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+/* Fin Estilos Generales */
+
+p {
+  font-family: var(--parrafos);
+}
+a {
+  font-family: var(--enlaces);
 }
 
-.banner img {
-    height: 300px;
-    width: 100%;
-    object-fit: cover;
-}
-
-.banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.content-section {
-    padding: 50px 0;
-}
-
-.content-section h2 {
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-.navbar .navbar-light {
-    position: fixed;
-
-}
-
+/* Navbar */
 .navbar li {
-    font-family: var(--enlaces);
-    font-size: 1.2rem;
+  font-family: var(--enlaces);
+  font-size: 1.2rem;
 }
+.navbar {
+  position: fixed !important;
+  top: 0 !important;
+  width: 100% !important;
+  z-index: 1030 !important;
+}
+.container-fluid {
+  margin-right: 1% !important;
+}
+@media (min-width: 768px) {
+  .container-fluid {
+    padding-left: 8% !important;
+    padding-right: 8% !important;
+  }
+}
+/* Fin Navbar */
 
+/* Banner */
+.banner {
+  position: relative;
+  text-align: center;
+  color: var(--white);
+  margin-top: 90px;
+}
+.banner img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+.banner-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+}
+/* Fin Banner */
+
+/* Intro */
+.text-intro {
+  margin-top: 5%;
+  margin-bottom: 10%;
+}
+/* Fin Intro */
+
+/* Sections */
+.content-section {
+  padding: 0;
+}
+.content-section h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.text-section {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.img-fluid {
+  max-width: 100dvh;
+  height: auto;
+}
+/* Fin Sections */
+
+/*Experiencias */
+.text-card {
+  margin-top: 20px;
+}
+.container-exp{
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+/* Fin Experiencias */
+
+/* Footer */
 .footer-icons i {
-    color: black;
+  color: var(--black);
 }
-
 .footer-copy p {
-    color: #969696;
-    font-family: var(--parrafos);
+  color: var(--grey);
+  font-family: var(--parrafos);
 }
-
 .footer-container h5 {
-    font-family: var(--titles);
-    font-weight: bolder;
+  font-family: var(--titles);
+  font-weight: bolder;
+}
+.footer-newsletter .form-control::placeholder {
+  color: var(--grey);
+  font-style: italic;
+  font-family: var(--enlaces);
+  letter-spacing: 1px;
+}
+.no-decoration {
+  text-decoration: none;
 }
 
-.footer-newsletter .form-control::placeholder {
-    color: #969696;
-    font-style: italic;
-    font-family: var(--enlaces);
-    letter-spacing: 1px;
+@media (max-width: 768px) {
+  .footermar{
+    padding-left: 1% !important;
+    padding-right: 1% !important;
+  }
 }
+
+/* Fin Footer */
