--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,10 +30,6 @@ a {
 }
 
 /* Navbar */
-.navbar .navbar-light {
-  position: fixed;
-  z-index: 1000;
-}
 
 .navbar li {
   font-family: var(--enlaces);
@@ -45,6 +41,7 @@ a {
   top: 0 !important;
   width: 100% !important;
   z-index: 1030 !important;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
 }
 
 .container-fluid {
