xd un ajuste en mobile

--- a/src/css/delicias.css
+++ b/src/css/delicias.css
@@ -98,8 +98,7 @@ a {
   margin-bottom: 40px;
 }
 .text-section {
-  padding-left: 10%;
-  padding-right: 10%;
+  padding: 10%;
 }
 .img-fluid {
   max-width: 100dvh;
