--- a/src/css/delicias.css
+++ b/src/css/delicias.css
@@ -38,10 +38,16 @@ a {
 }
 
 /* Navbar */
+
 .navbar li {
   font-family: var(--enlaces);
   font-size: 1.2rem;
 }
+.navbar .navbar-light {
+  position: fixed;
+  z-index: 1000;
+}
+
 .navbar {
   position: fixed !important;
   top: 0 !important;
@@ -49,15 +55,18 @@ a {
   z-index: 1030 !important;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
 }
+
 .container-fluid {
   margin-right: 1% !important;
 }
+
 @media (min-width: 768px) {
   .container-fluid {
     padding-left: 8% !important;
     padding-right: 8% !important;
   }
 }
+
 /* Fin Navbar */
 
 /* Banner */
