--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -3,29 +3,33 @@ body {
 }
 
 h2 {
-  font-size: 64;
+    font-family: 'Bodoni MT';
+    font-size: 64px;
+}
+
+h3{
+    font-family: 'Inter';
+    font-size: 50px;
+}
+
+.contenido {
+    padding-left: 50%;
+
+    @media (width <=768px) {
+        text-align: center;
+        padding: 50px;
+    }
 }
 
 .description {
-  font: inherit;
-  font-size: 64;
+    font-size: 64;
+    font-family: 'Inter';
 }
 
 .elements-img {
-  max-height: 500px;
   max-width: 100%;
   height: auto;
   object-fit: cover;
-}
-
-.content {
-  padding-top: 50px;
-  padding-right: 30px;
-
-  @media (width <=768px) {
-    text-align: center;
-    padding: 50px;
-  }
 }
 
 .content-r {
@@ -42,7 +46,6 @@ h2 {
 
 .banner {
   width: 100%;
-  height: 300px;
   position: relative;
   display: inline-block;
   text-align: center;
@@ -50,18 +53,25 @@ h2 {
 }
 
 .banner-img {
-  max-height: 300px;
   width: 100%;
   object-fit: cover;
 }
 
 .banner-text {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-transform: capitalize;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    vertical-align: middle;
+    color: white;
+    text-transform: capitalize;
+    font-family: 'Inter';
+    font-size: 76px;
+
+    @media (width <=768px) {
+        text-align: center;
+        font-size: 45px;
+    }
 }
 
 .elements {
