--- a/src/css/reservas.css
+++ b/src/css/reservas.css
@@ -1,137 +1,166 @@
+/* Estilos Generales */
+:root {
+  --titles: "Bodoni Moda", serif;
+  --enlaces: "Cabin", sans-serif;
+  --parrafos: "Inter", sans-serif;
+  --black: #000000;
+  --white: #fff;
+  --grey: #969696;
+  --grey2: #d9d9d9;
+  --background: #f0f0f0;
+}
+
 body {
-    background-color: white;
+  margin: 0;
+  font-family: var(--parrafos);
 }
 
 h2 {
-    font-size: 64;
+  font-family: 'Bodoni MT';
+  font-size: 64px;
+  text-align: center;
+}
+
+h3 {
+  font-family: var(--titles);
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+
+p {
+  font-family: var(--parrafos);
+}
+
+a {
+  font-family: var(--enlaces);
+}
+
+.col-md-6 {
+  margin: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+/* Fin Estilos Generales */
+
+/* Navbar */
+
+.navbar li {
+  font-family: var(--enlaces);
+  font-size: 1.2rem;
 }
 
 .navbar .navbar-light {
-    position: fixed;
-
+  position: fixed;
+  z-index: 1000;
 }
 
-.navbar li {
-    font-family: var(--enlaces);
-    font-size: 1.2rem;
+.navbar {
+  position: fixed !important;
+  top: 0 !important;
+  width: 100% !important;
+  z-index: 1030 !important;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
 }
 
-.description {
-    font: inherit;
-    font-size: 64;
+.container-fluid {
+  margin-right: 1% !important;
 }
 
-
-.elements-img {
-    max-height: 500px;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    position: relative;
+@media (min-width: 768px) {
+  .container-fluid {
+    padding-left: 8% !important;
+    padding-right: 8% !important;
+  }
 }
 
-.elements-icon {
-    position: absolute;
-    vertical-align: center;
-    max-height: 200px;
+/* Fin Navbar */
 
-    @media (width <=768px) {
-        vertical-align: top;
-        min-height: 300px;
-        align-self: start;
-        padding-top: 30%;
-    }
-}
-
-.elements-img-r {
-    max-height: 500px;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    position: relative;
-}
-
-.elements-icon-r {
-    position: absolute;
-    vertical-align: center;
-    align-self: right;
-    max-height: 200px;
-
-}
-
-.content {
-    padding-top: 50px;
-    padding-right: 30px;
-
-    @media (width <=768px) {
-        text-align: center;
-    }
-}
-
-.content-r {
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-left: 80px;
-    text-align: right;
-
-    @media (width <=768px) {
-        text-align: center;
-        padding: 50px;
-    }
-
-}
-
-.link {
-    font-size: 22;
-    color: black;
-    text-align: center;
-}
-
+/* Banner */
 .banner {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    margin: 0;
+  position: relative;
+  text-align: center;
+  color: var(--white);
+  margin-top: 90px;
 }
 
-.banner-img {
-    height: 300px;
-    width: 100%;
-    object-fit: cover;
+.banner img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-transform: capitalize;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.elements {
-    align-items: center;
+/* Fin Banner */
+
+/* Intro */
+.text-intro {
+  margin-top: 5%;
+  margin-bottom: 10%;
 }
 
+/* Fin Intro */
+
+/* Sections */
+.content-section {
+  padding: 0;
+}
+
+.content-section h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.text-section {
+  padding: 10%;
+}
+
+.img-fluid {
+  max-width: 100dvh;
+  height: auto;
+}
+
+/* Fin Sections */
+
+/* Footer */
 .footer-icons i {
-    color: black;
+  color: var(--black);
 }
 
 .footer-copy p {
-    color: #969696;
-    font-family: var(--parrafos);
+  color: var(--grey);
+  font-family: var(--parrafos);
 }
 
 .footer-container h5 {
-    font-family: var(--titles);
-    font-weight: bolder;
+  font-family: var(--titles);
+  font-weight: bolder;
 }
 
 .footer-newsletter .form-control::placeholder {
-    color: #969696;
-    font-style: italic;
-    font-family: var(--enlaces);
-    letter-spacing: 1px;
+  color: var(--grey);
+  font-style: italic;
+  font-family: var(--enlaces);
+  letter-spacing: 1px;
 }
+
+.no-decoration {
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .footermar {
+    padding-left: 1% !important;
+    padding-right: 1% !important;
+  }
+}
+
+/* Fin Footer */
