--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -23,7 +23,7 @@ h3 {
 }
 
 h2 {
-  font-family: 'Bodoni MT';
+  font-family: var(--titles);
   font-size: 64px;
   text-align: center;
 }
@@ -82,11 +82,11 @@ a {
   position: relative;
   text-align: center;
   color: var(--white);
-  margin-top: 90px;
+  margin-top: 5%;
 }
 
 .banner img {
-  height: 300px;
+  height: 50;
   width: 100%;
   object-fit: cover;
   filter: brightness(50%);
