--- a/src/css/hotel.css
+++ b/src/css/hotel.css
@@ -70,10 +70,10 @@
     position: relative;
     text-align: center;
     color: var(--white);
-    margin-top: 90px;
+    margin-top: 5%;
   }
   .banner img {
-    height: 300px;
+    height: 50%;
     width: 100%;
     object-fit: cover;
   }
