--- a/src/css/spa.css
+++ b/src/css/spa.css
@@ -70,10 +70,10 @@
     position: relative;
     text-align: center;
     color: var(--white);
-    margin-top: 5%;
+    margin-top: 90px;
   }
   .banner img {
-    height: 50%;
+    height: 500px;
     width: 100%;
     object-fit: cover;
   }
