--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -82,7 +82,7 @@ a {
   position: relative;
   text-align: center;
   color: var(--white);
-  margin-top: 5%;
+  margin-top: 90px;
 }
 
 .banner img {
