--- a/src/css/hotel.css
+++ b/src/css/hotel.css
@@ -175,3 +175,15 @@ a {
   z-index: 1000;
 }
 /* Fin Footer */
+
+/* Scroll top button */
+#scrollToTopBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 100;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+/* 
+Fin Scroll top button */
