--- a/src/css/index.css
+++ b/src/css/index.css
@@ -273,3 +273,15 @@ a {
   text-decoration: none;
 }
 /* Fin Footer */
+
+/* Scroll top button */
+#scrollToTopBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 100;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+/* 
+Fin Scroll top button */
