--- a/src/css/spa.css
+++ b/src/css/spa.css
@@ -124,3 +124,37 @@
 }
 
 /* Fin Footer */
+
+
+
+
+
+
+
+
+
+
+
+
+.slider{
+  width: 100vw;
+  height:540px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slider .slide-track{
+  display: flex;
+  animation: scroll 40s linear infinite;
+  width: calc(338 * 8);
+}
+
+
+
+.slider .slide{
+  width: 338px;
+}
+
+.slider .slide img{
+  width: 100%;
+}
