--- a/src/css/actividades.css
+++ b/src/css/actividades.css
@@ -9,39 +9,27 @@
   --grey2: #d9d9d9;
   --background: #f0f0f0;
 }
-
 body {
   margin: 0;
   font-family: var(--parrafos);
 }
 
-h1,
-h3 {
+
+h2 {
   font-family: var(--titles);
   font-weight: 500;
   font-size: 2.4rem;
 }
-
-h2 {
-  font-family: var(--titles);
-  font-size: 64px;
-  text-align: center;
+h3 {
+  font-family: var(--enlaces);
+  margin-top: 50px;
 }
-
 p {
   font-family: var(--parrafos);
 }
-
 a {
   font-family: var(--enlaces);
 }
-
-.col-md-6 {
-  margin: 0 !important;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
-
 /* Fin Estilos Generales */
 
 /* Navbar */
@@ -50,7 +38,6 @@ a {
   font-family: var(--enlaces);
   font-size: 1.2rem;
 }
-
 .navbar .navbar-light {
   position: fixed;
   z-index: 1000;
@@ -86,21 +73,38 @@ a {
 }
 
 .banner img {
-  height: 50;
+  height: 500px;
   width: 100%;
   object-fit: cover;
-  filter: brightness(50%);
+}
+
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  border-radius: 10px;
 }
 
 .banner-text {
+  
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  border-radius: 10px;
+  z-index: 2; 
 }
 
+.banner-text h1{
+  font-family: var(--enlaces);
+  font-weight: bold;
+  font-size: 4rem ;
+}
 /* Fin Banner */
 
 /* Intro */
