--- a/src/css/hotel.css
+++ b/src/css/hotel.css
@@ -13,7 +13,8 @@ body {
   margin: 0;
   font-family: var(--parrafos);
 }
-h1,
+
+
 h2 {
   font-family: var(--titles);
   font-weight: 500;
@@ -70,20 +71,42 @@ a {
   color: var(--white);
   margin-top: 90px;
 }
+
 .banner img {
   height: 500px;
   width: 100%;
   object-fit: cover;
 }
+
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  border-radius: 10px;
+}
+
 .banner-text {
+  
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  border-radius: 10px;
+  z-index: 2; 
+}
+
+.banner-text h1{
+  font-family: var(--enlaces);
+  font-weight: bold;
+  font-size: 4rem ;
 }
 /* Fin Banner */
+
 
 /* Intro */
 .img-intro img {
