--- a/src/css/spa.css
+++ b/src/css/spa.css
@@ -1,38 +1,37 @@
 /* Estilos Generales */
 :root {
-    --titles: "Bodoni Moda", serif;
-    --enlaces: "Cabin", sans-serif;
-    --parrafos: "Inter", sans-serif;
-    --black: #000000;
-    --white: #fff;
-    --grey: #969696;
-    --grey2: #d9d9d9;
-    --background: #f0f0f0;
-  }
-  body {
-    margin: 0;
-    font-family: var(--parrafos);
-  }
-  h1,
-  h2 {
-    font-family: var(--titles);
-    font-weight: 500;
-    font-size: 2.4rem;
-  }
-  h3 {
-    font-family: var(--enlaces);
-    margin-top: 50px;
-  }
-  p {
-    font-family: var(--parrafos);
-  }
-  a {
-    font-family: var(--enlaces);
-  }
-  /* Fin Estilos Generales */
-  
- 
-  
+  --titles: "Bodoni Moda", serif;
+  --enlaces: "Cabin", sans-serif;
+  --parrafos: "Inter", sans-serif;
+  --black: #000000;
+  --white: #fff;
+  --grey: #969696;
+  --grey2: #d9d9d9;
+  --background: #f0f0f0;
+}
+body {
+  margin: 0;
+  font-family: var(--parrafos);
+}
+
+
+h2 {
+  font-family: var(--titles);
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+h3 {
+  font-family: var(--enlaces);
+  margin-top: 50px;
+}
+p {
+  font-family: var(--parrafos);
+}
+a {
+  font-family: var(--enlaces);
+}
+/* Fin Estilos Generales */
+
 /* Navbar */
 
 .navbar li {
@@ -64,29 +63,49 @@
 }
 
 /* Fin Navbar */
-  
+
 /* Banner */
 .banner {
-    position: relative;
-    text-align: center;
-    color: var(--white);
-    margin-top: 90px;
-  }
-  .banner img {
-    height: 500px;
-    width: 100%;
-    object-fit: cover;
-  }
-  .banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  /* Fin Banner */
+  position: relative;
+  text-align: center;
+  color: var(--white);
+  margin-top: 90px;
+}
 
+.banner img {
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.banner-text {
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  z-index: 2; 
+}
+
+.banner-text h1{
+  font-family: var(--enlaces);
+  font-weight: bold;
+  font-size: 4rem ;
+}
+/* Fin Banner */
 
 
 
