--- a/src/css/delicias.css
+++ b/src/css/delicias.css
@@ -136,10 +136,14 @@ a {
 }
 
 .img-fluid {
-  max-width: 100dvh;
+  width: 100%;
   height: auto;
 }
 
+.img-fluid-2 {
+  max-width: 100dvh;
+  height: auto;
+}
 /* Fin Sections */
 
 /*Experiencias */
